infra/k8s-prod/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: www.viepe.net
      http:
        paths:
          - path: /api/payments/?(.*)
            pathType: Prefix
            backend:
                service:
                  name: payments-cluster-ip-service
                  port:
                    number: 3000
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
                service:
                  name: auth-cluster-ip-service
                  port:
                    number: 3000
          - path: /api/tickets/?(.*)
            pathType: Prefix
            backend:
                service:
                  name: tickets-cluster-ip-service
                  port:
                    number: 3000
          - path: /api/orders/?(.*)
            pathType: Prefix
            backend:
                service:
                  name: orders-cluster-ip-service
                  port:
                    number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
                service:
                  name: client-cluster-ip-service
                  port:
                    number: 3000
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.digitalocean.com/load-balancer-id: "ac6c6136756654c928ccf3edce8afa20"
    service.beta.kubernetes.io/do-loadbalancer-size-unit: "1"
    service.beta.kubernetes.io/do-loadbalancer-disable-lets-encrypt-dns-records: "false"
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
    service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.viepe.net'
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
